<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2018, The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <!-- App title and fragment titles -->
    <string name="app_name">Track My Sleep Quality</string>
    <string name="sleep_tracker_fragment">SleepTrackerFragment</string>
    <string name="sleep_quality_fragment">SleepQualityFragment</string>

    <!-- Button labels -->
    <string name="partido1">Cádiz - Rayo</string>
    <string name="partido2">Cádiz - Osasuna</string>
    <string name="clear">Clear</string>

    <!-- contentDescription strings for quality icons -->
    <string name="tribuna">Tribuna</string>
    <string name="preferencia">Preferencia</string>
    <string name="FS">Fondo sur</string>
    <string name="FN">Fondo norte</string>

    <!-- Output to TextView styled with a little HTML -->
    <string name="title"><![CDATA[<h3>Resumen de compra</h3>]]></string>
    <string name="partido"><![CDATA[<b>Partido:</b>]]></string>
    <string name="end_time"><![CDATA[<b>End:</b>]]></string>
    <string name="grada"><![CDATA[<b>Grada:</b>]]></string>
    <string name="hours_slept"><![CDATA[<b>Hours:Minutes:Seconds</b>]]></string>

    <!-- Sleep quality strings -->
    <string name="elegir_grada">¿En qué grada quieres ver el partido?</string>
    <string name="zero_very_bad">Very bad</string>
    <string name="one_poor">Poor</string>
    <string name="two_soso">So-so</string>
    <string name="three_ok">OK</string>
    <string name="four_pretty_good">Pretty good</string>
    <string name="five_excellent">Excellent!</string>

    <!-- Toast to play after Clear button has been pressed -->
    <string name="cleared_message">All your data is gone forever.</string>

</resources>
