<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- Data to make available to the XML via data binding. In this case,
     the whole ViewModel, so that we can access the LiveData,
     click handlers, and state variables. -->
    <data>

        <variable
            name="gradaViewModel"
            type="com.example.android.gestiondeentradas.grada.GradaViewModel" />
    </data>

    <!-- Start of the visible fragment layout using ConstraintLayout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".grada.GradaFragment">

        <TextView
            android:id="@+id/title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:fontFamily="@font/roboto"
            android:text="@string/elegir_grada"
            android:textSize="@dimen/title_text_size"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <Button
            android:id="@+id/btn_tribuna"
            style="@style/SleepButtons"
            android:layout_width="138dp"
            android:layout_height="61dp"
            android:layout_marginTop="64dp"
            android:contentDescription="@string/tribuna"
            android:onClick="@{() -> gradaViewModel.onSetSleepQuality(0)}"
            android:text="@string/tribuna"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />

        <Button
            android:id="@+id/btn_preferencia"
            style="@style/SleepButtons"
            android:layout_width="138dp"
            android:layout_height="61dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/preferencia"
            android:onClick="@{() -> gradaViewModel.onSetSleepQuality(1)}"
            android:text="@string/preferencia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_tribuna"
            app:layout_constraintTop_toBottomOf="@+id/btn_tribuna" />

        <Button
            android:id="@+id/btn_FS"
            style="@style/SleepButtons"
            android:layout_width="138dp"
            android:layout_height="61dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/FS"
            android:onClick="@{() -> gradaViewModel.onSetSleepQuality(2)}"
            android:text="@string/FS"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_preferencia"
            app:layout_constraintTop_toBottomOf="@+id/btn_preferencia" />

        <Button
            android:id="@+id/btn_FN"
            style="@style/SleepButtons"
            android:layout_width="138dp"
            android:layout_height="61dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/FN"
            android:onClick="@{() -> gradaViewModel.onSetSleepQuality(3)}"
            android:text="@string/FN"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/btn_FS"
            app:layout_constraintTop_toBottomOf="@+id/btn_FS" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
